--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.7.0",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "serve-favicon": "^2.5.0"
   }
 }
