--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jiratimestandalone",
-  "version": "0.0.0",
+  "name": "plywood",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
