--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ JIRA_USERNAME=(your user email ex: john.doe@email.com)
 JIRA_API_TOKEN= (create one at https://id.atlassian.com/manage/api-tokens)
 JIRA_DONE_STATUS=(Status to define an issue as done ex: "Done")
 JIRA_MAX_SEARCH_RESULTS=200
+DISABLE_HTTPS=False
