--- a/example.env
+++ b/example.env
@@ -1,6 +1,22 @@
+#Jira instance
 JIRA_URL=(your site).atlassian.net
-JIRA_USERNAME=(your user email ex: john.doe@email.com)
-JIRA_API_TOKEN= (create one at https://id.atlassian.com/manage/api-tokens)
+
+# JIRA API & Authentication
+JIRA_API_DISABLE_HTTPS_VALIDATION=False (Disable https certificate validation to the jira cloud API. usefull if using a firewall that swaps SSL certificates)
+JIRA_AUTH_TYPE=(either BASIC or OAUTH. configure the appropriate section)
+
+# Basic Authentication - see here for token https://id.atlassian.com/manage/api-tokens
+JIRA_BASIC_AUTH_USERNAME=(your user email ex: john.doe@email.com)
+JIRA_BASIC_AUTH_API_TOKEN= (create one at https://id.atlassian.com/manage/api-tokens)
+
+# OAuth Authentication - see here https://developer.atlassian.com/cloud/jira/software/oauth-2-3lo-apps/
+JIRA_OAUTH_CLIENT_ID=(the oauth apps client ID)
+JIRA_OAUTH_CLIENT_SECRET=(the oauth apps secret)
+JIRA_OAUTH_CALLBACK_URL=(oauth callback url ex: http://locahost:3000/auth/callback if hosted locally on default settings)
+
+# Jira issue settings
 JIRA_DONE_STATUS=(Status to define an issue as done ex: "Done")
 JIRA_MAX_SEARCH_RESULTS=200
-DISABLE_HTTPS=False
+
+# Express app settings
+PORT=3000
