--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "dayjs": "^1.11.10",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-nunjucks": "^3.1.1",
+    "express-session": "^1.17.3",
     "fullcalendar": "^6.1.9",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.7.0",
     "nunjucks": "^3.2.4",
+    "passport": "^0.7.0",
+    "passport-atlassian-oauth2": "^2.1.0",
+    "passport-oauth2": "^1.7.0",
     "serve-favicon": "^2.5.0"
   }
 }
