--- a/example.env
+++ b/example.env
@@ -1,22 +1,35 @@
-#Jira instance
-JIRA_URL=(your site).atlassian.net
+# Jira instance 
+# (ex: example.atlassian.net)
+JIRA_URL=example.atlassian.net
 
 # JIRA API & Authentication
-JIRA_API_DISABLE_HTTPS_VALIDATION=False (Disable https certificate validation to the jira cloud API. usefull if using a firewall that swaps SSL certificates)
-JIRA_AUTH_TYPE=(either BASIC or OAUTH. configure the appropriate section)
+# Disable https certificate validation to the jira cloud API. usefull if using a firewall that swaps SSL certificates
+JIRA_API_DISABLE_HTTPS_VALIDATION=False 
+# either BASIC or OAUTH. configure the appropriate section
+JIRA_AUTH_TYPE=OAUTH
+
+# these sections are only required if using the corresponding authentication type
 
 # Basic Authentication - see here for token https://id.atlassian.com/manage/api-tokens
-JIRA_BASIC_AUTH_USERNAME=(your user email ex: john.doe@email.com)
-JIRA_BASIC_AUTH_API_TOKEN= (create one at https://id.atlassian.com/manage/api-tokens)
+# Your user email
+JIRA_BASIC_AUTH_USERNAME=john.doe@email.com
+# Your user token, create one at https://id.atlassian.com/manage/api-tokens
+JIRA_BASIC_AUTH_API_TOKEN=[your token]
 
 # OAuth Authentication - see here https://developer.atlassian.com/cloud/jira/software/oauth-2-3lo-apps/
-JIRA_OAUTH_CLIENT_ID=(the oauth apps client ID)
-JIRA_OAUTH_CLIENT_SECRET=(the oauth apps secret)
-JIRA_OAUTH_CALLBACK_URL=(oauth callback url ex: http://locahost:3000/auth/callback if hosted locally on default settings)
+# Your oauth apps client ID - create one here https://developer.atlassian.com/console/myapps/
+JIRA_OAUTH_CLIENT_ID=[your client id]
+# The oauth apps secret
+JIRA_OAUTH_CLIENT_SECRET=[your client secret]
+# The oauth callback url - this must match the url you set in the oauth app settings. only change if you host the app on a different domain, in which case you know what you're doing :)
+JIRA_OAUTH_CALLBACK_URL=http://locahost:3000/auth/callback
 
 # Jira issue settings
-JIRA_DONE_STATUS=(Status to define an issue as done ex: "Done")
+# Status to define an issue as done
+JIRA_DONE_STATUS="Done"
+# Maximum number of issues to return at once. 
 JIRA_MAX_SEARCH_RESULTS=200
 
 # Express app settings
+# The port to run the app on
 PORT=3000
