Various bug fizes, added loading indicator, added search using jira's issue suggestion endpoint

--- a/example.env
+++ b/example.env
@@ -29,6 +29,8 @@ JIRA_OAUTH_CALLBACK_URL=http://locahost:3000/auth/callback
 JIRA_DONE_STATUS="Done"
 # Maximum number of issues to return at once. 
 JIRA_MAX_SEARCH_RESULTS=200
+# JQL used to filter suggested issues. uswful for restricting to a project
+JIRA_PROJECT_JQL="project = PLY"
 
 # Express app settings
 # The port to run the app on
