--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@adobe/node-fetch-retry": "^2.2.0",
     "cookie-parser": "~1.4.4",
     "dayjs": "^1.11.10",
     "debug": "~2.6.9",
