Implemented timer, dark mode, issue type colors and issue type icons. Refactored client side javascript

--- a/example.env
+++ b/example.env
@@ -35,3 +35,6 @@ JIRA_PROJECT_JQL="project = PLY"
 # Express app settings
 # The port to run the app on
 PORT=3000
+
+# Visual settings
+DEFAULT_ISSUE_COLOR="#2a75fe"
