--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
   "name": "plywood",
-  "version": "0.0.3",
+  "version": "0.2.4",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@adobe/node-fetch-retry": "^2.2.0",
-    "cookie-parser": "~1.4.4",
-    "dayjs": "^1.11.10",
-    "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-nunjucks": "^3.1.1",
-    "express-session": "^1.17.3",
-    "fullcalendar": "^6.1.9",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "node-fetch": "^2.7.0",
+    "cookie-parser": "~1.4.6",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-nunjucks": "^3.1.2",
+    "express-session": "^1.18.0",
+    "morgan": "~1.10.0",
+    "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
     "passport-atlassian-oauth2": "^2.1.0",
-    "passport-oauth2": "^1.7.0",
-    "serve-favicon": "^2.5.0"
+    "passport-oauth2": "^1.8.0"
   }
 }
