Implemented self signed HTTPS and updated HTTPS logic

--- a/example.env
+++ b/example.env
@@ -36,5 +36,14 @@ JIRA_PROJECT_JQL="project = PLY"
 # The port to run the app on
 PORT=3000
 
+# HTTPS Settings
+
+# Generate a self signed SSL certificate. This is useful for local development, but not recommended for production
+GENERATE_SSL_CERT=true
+
+# SSL Cert Paths. will be ignored if GENERATE_SSL_CERT is true
+SSL_CERT_PATH=./config/ssl/cert.pem
+SSL_KEY_PATH=./config/ssl/key.pem
+
 # Visual settings
 DEFAULT_ISSUE_COLOR="#2a75fe"
