--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express-session": "^1.18.0",
     "morgan": "~1.10.0",
     "node-fetch": "^3.3.2",
+    "node-forge": "^1.3.1",
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
     "passport-atlassian-oauth2": "^2.1.0",
-    "passport-oauth2": "^1.8.0"
+    "passport-oauth2": "^1.8.0",
+    "selfsigned": "^2.4.1"
   }
 }
