--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "0.2.4",
   "private": true,
   "scripts": {
-    "preinstall": "npm install --global windows-build-tools",
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "canvas": "^2.11.2",
     "cookie-parser": "~1.4.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-nunjucks": "^3.1.2",
     "express-session": "^1.18.0",
+    "jsdom": "^25.0.1",
     "morgan": "~1.10.0",
     "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
