--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "cookie-parser": "~1.4.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
