--- a/example.env
+++ b/example.env
@@ -11,6 +11,7 @@ JIRA_AUTH_TYPE=OAUTH
 # these sections are only required if using the corresponding authentication type
 
 # Basic Authentication - see here for token https://id.atlassian.com/manage/api-tokens
+# NOT RECOMMENDED - Has not been tested much
 # Your user email
 JIRA_BASIC_AUTH_USERNAME=john.doe@email.com
 # Your user token, create one at https://id.atlassian.com/manage/api-tokens
@@ -22,6 +23,7 @@ JIRA_OAUTH_CLIENT_ID=[your client id]
 # The oauth apps secret
 JIRA_OAUTH_CLIENT_SECRET=[your client secret]
 # The oauth callback url - this must match the url you set in the oauth app settings. only change if you host the app on a different domain, in which case you know what you're doing :)
+# If this starts with https:// , either set GENERATE_SSL_CERT to true or provide your own SSL certificate
 JIRA_OAUTH_CALLBACK_URL=http://locahost:3000/auth/callback
 
 # Jira issue settings
@@ -41,7 +43,7 @@ PORT=3000
 # Generate a self signed SSL certificate. This is useful for local development, but not recommended for production
 GENERATE_SSL_CERT=true
 
-# SSL Cert Paths. will be ignored if GENERATE_SSL_CERT is true
+# SSL Cert Paths. Will be used to store the generated certificates
 SSL_CERT_PATH=./config/ssl/cert.pem
 SSL_KEY_PATH=./config/ssl/key.pem
 
