--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "async-mutex": "^0.5.0",
+    "compression": "^1.7.5",
     "cookie-parser": "~1.4.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -28,7 +29,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "sass": "^1.69.5",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sass": "^1.69.5"
   }
 }
