feat: Implement notes functionality and enhance API error handling
- Added functionality for resizing the notes panel with visual feedback and persistence using localStorage.
- Enhanced API call handling with improved error management and user notifications for authentication issues.
- Created a notification system for user-friendly messages regarding session expiration and errors.
- Updated styles for the notes panel and sprint-related components to improve UI/UX.
- Introduced new modal views for displaying notes and sprint information, including dynamic loading and interaction capabilities.
- Implemented CRUD operations for sprint notes with appropriate user feedback and error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
+.copilot-instructions.md
 
 # Plywood specific
 /config/*
