feat: Enhance dotenv configuration and logging for JIRA API validation

--- a/example.env
+++ b/example.env
@@ -3,8 +3,9 @@
 JIRA_URL=example.atlassian.net
 
 # JIRA API & Authentication
-# Disable https certificate validation to the jira cloud API. usefull if using a firewall that swaps SSL certificates
-JIRA_API_DISABLE_HTTPS_VALIDATION=False 
+# Disable HTTPS certificate validation for JIRA API calls. Useful if using a firewall/proxy that replaces SSL certificates
+# Set to 'true' to disable validation, 'false' or leave empty to enable validation
+JIRA_API_DISABLE_HTTPS_VALIDATION=false
 # either BASIC or OAUTH. configure the appropriate section
 JIRA_AUTH_TYPE=OAUTH
 
